[project]
name = "backend-takehome-problem"
version = "0.1.0"
description = ""
authors = [
    {name = "gowtham",email = "gowthamgalaxy007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend_takehome_problem", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "main:main"